[package]
name = "ethereum-handshaker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
hex = { version = "0.4" }
keccak-hash = { version = "0.10" }
secp256k1 = { version = "0.29", features = ["hashes-std", "rand-std"] }
rlp = { version = "0.5" }
rlp-derive = { version = "0.1" }
thiserror = { version = "1.0" }
tokio = { version = "1.38", features = ["net", "rt", "rt-multi-thread", "macros"] }
