[package]
name = "ethereum-handshaker"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { version = "0.8", features = [] }
alloy-primitives = { version = "0.7" }
async-trait = { version = "0.1" }
concat-kdf = { version = "0.1" }
ctr = { version = "0.9" }
hmac = { version = "0.12" }
keccak-hash = { version = "0.10" }
secp256k1 = { version = "0.29", features = ["hashes-std", "rand-std"] }
rlp = { version = "0.5" }
rlp-derive = { version = "0.1" }
sha2 = { version = "0.10" }
thiserror = { version = "1.0" }
tokio = { version = "1.38", features = ["net", "rt", "rt-multi-thread", "macros"] }
